# vs-cmnet2

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: sample2_cmnet2dit.vpy  sample_cmnet2.vpy
vscmnet2/: __init__.py  cmnet2_utils.py
vscmnet2/colormnet2/: __init__.py  colormnet2_client.py  colormnet2_logbuffer.py  colormnet2_render.py  colormnet2_server.py  colormnet2_utils.py
vscmnet2/colormnet2/dataset/: range_transform.py  static_dataset.py  vos_dataset.py
vscmnet2/colormnet2/inference/: inference_core.py  kv_memory_store.py  memory_manager.py
vscmnet2/colormnet2/inference/data/: mask_mapper.py  test_datasets.py  video_reader.py
vscmnet2/colormnet2/model/: attention.py  losses.py  modules.py  network.py  resnet.py  trainer.py
vscmnet2/colormnet2/util/: configuration.py  functional.py  image_saver.py  log_integrator.py  transforms.py
vscmnet2/vsslib/: __int__.py  constants.py  imfilters.py  mcomb.py  nputils.py  restcolor.py  vsfilters.py  vsimage_engine.py  vsmodels.py  vsplugins.py  vsresize.py  vsscdect.py  vsscdetect_edge.py  vsutils.py
