[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
]

[project]
name = "vscmnet2"
version = "1.0.4"
description = "CMNET2 functions for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Dan64", email = "whitedan64@gmail.com"}]
keywords = ["CMNET2", "VapourSynth", "Colorization"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video"
]
dependencies = [   
  "numpy>=1.26.2",
  "torch>=2.9.1",
  "pillow>=9.0.0",
  "VapourSynth==74",
  "scipy>=1.0.0",
  "opencv-python>=4.0.0",
  "scikit-image>=0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/dan64/vs-cmnet2"
"Bug Tracker" = "https://github.com/dan64/vs-cmnet2/issues"
